exports[`CreateTournament players should default to an empty object 1`] = `
<Panel
  bsClass="panel"
  bsStyle="default"
  className="create-tournament"
  defaultExpanded={false}>
  <Row
    bsClass="row"
    componentClass="div">
    <Col
      bsClass="col"
      componentClass="div"
      xs={1} />
    <Col
      bsClass="col"
      componentClass="div"
      xs={10}>
      <form
        onSubmit={[Function]}>
        <FormGroup
          bsClass="form-group">
          <ControlLabel
            bsClass="control-label"
            srOnly={false}>
            <h4>
              Tournament Name
            </h4>
          </ControlLabel>
          <InputGroup
            bsClass="input-group">
            <FormControl
              bsClass="form-control"
              componentClass="input"
              name="name"
              onChange={[Function]}
              placeholder="Tournament Name"
              type="text"
              value="" />
            <DropdownButton
              componentClass={[Function]}
              id="tournament_rounds"
              title="1 Round">
              <MenuItem
                bsClass="dropdown"
                disabled={false}
                divider={false}
                header={false}
                onClick={[Function]}>
                1 Round
              </MenuItem>
              <MenuItem
                bsClass="dropdown"
                disabled={false}
                divider={false}
                header={false}
                onClick={[Function]}>
                2
                 Rounds
              </MenuItem>
              <MenuItem
                bsClass="dropdown"
                disabled={false}
                divider={false}
                header={false}
                onClick={[Function]}>
                4
                 Rounds
              </MenuItem>
              <MenuItem
                bsClass="dropdown"
                disabled={false}
                divider={false}
                header={false}
                onClick={[Function]}>
                6
                 Rounds
              </MenuItem>
              <MenuItem
                bsClass="dropdown"
                disabled={false}
                divider={false}
                header={false}
                onClick={[Function]}>
                8
                 Rounds
              </MenuItem>
              <MenuItem
                bsClass="dropdown"
                disabled={false}
                divider={false}
                header={false}
                onClick={[Function]}>
                10
                 Rounds
              </MenuItem>
              <MenuItem
                bsClass="dropdown"
                disabled={false}
                divider={false}
                header={false}
                onClick={[Function]}>
                12
                 Rounds
              </MenuItem>
            </DropdownButton>
            <InputGroupButton
              bsClass="input-group-btn">
              <Button
                active={false}
                block={false}
                bsClass="btn"
                bsStyle="default"
                disabled={false}
                type="submit">
                Create
              </Button>
            </InputGroupButton>
          </InputGroup>
        </FormGroup>
      </form>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={1} />
  </Row>
  <Row
    bsClass="row"
    componentClass="div">
    <Col
      bsClass="col"
      componentClass="div"
      xs={12} />
  </Row>
  <Row
    bsClass="row"
    componentClass="div">
    <Col
      bsClass="col"
      componentClass="div"
      xs={1} />
    <Col
      bsClass="col"
      componentClass="div"
      xs={5}>
      <ControlLabel
        bsClass="control-label"
        srOnly={false}>
        <h4>
          Add Players!
        </h4>
      </ControlLabel>
      <FormControl
        bsClass="form-control"
        componentClass="input"
        name="playerSearch"
        onChange={[Function]}
        placeholder="Search here for existing players to play with."
        type="text"
        value="" />
      <PlayerList
        all={true}
        move={[Function]}
        players={Array []}
        searchValue="" />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={5}>
      <ControlLabel
        bsClass="control-label"
        srOnly={false}>
        <h4>
          Added Players
        </h4>
      </ControlLabel>
      <PlayerList
        all={false}
        move={[Function]}
        players={Array []}
        searchValue="" />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={1} />
  </Row>
</Panel>
`;

exports[`CreateTournament should match the snapshot 1`] = `
<Panel
  bsClass="panel"
  bsStyle="default"
  className="create-tournament"
  defaultExpanded={false}>
  <Row
    bsClass="row"
    componentClass="div">
    <Col
      bsClass="col"
      componentClass="div"
      xs={1} />
    <Col
      bsClass="col"
      componentClass="div"
      xs={10}>
      <form
        onSubmit={[Function]}>
        <FormGroup
          bsClass="form-group">
          <ControlLabel
            bsClass="control-label"
            srOnly={false}>
            <h4>
              Tournament Name
            </h4>
          </ControlLabel>
          <InputGroup
            bsClass="input-group">
            <FormControl
              bsClass="form-control"
              componentClass="input"
              name="name"
              onChange={[Function]}
              placeholder="Tournament Name"
              type="text"
              value="" />
            <DropdownButton
              componentClass={[Function]}
              id="tournament_rounds"
              title="1 Round">
              <MenuItem
                bsClass="dropdown"
                disabled={false}
                divider={false}
                header={false}
                onClick={[Function]}>
                1 Round
              </MenuItem>
              <MenuItem
                bsClass="dropdown"
                disabled={false}
                divider={false}
                header={false}
                onClick={[Function]}>
                2
                 Rounds
              </MenuItem>
              <MenuItem
                bsClass="dropdown"
                disabled={false}
                divider={false}
                header={false}
                onClick={[Function]}>
                4
                 Rounds
              </MenuItem>
              <MenuItem
                bsClass="dropdown"
                disabled={false}
                divider={false}
                header={false}
                onClick={[Function]}>
                6
                 Rounds
              </MenuItem>
              <MenuItem
                bsClass="dropdown"
                disabled={false}
                divider={false}
                header={false}
                onClick={[Function]}>
                8
                 Rounds
              </MenuItem>
              <MenuItem
                bsClass="dropdown"
                disabled={false}
                divider={false}
                header={false}
                onClick={[Function]}>
                10
                 Rounds
              </MenuItem>
              <MenuItem
                bsClass="dropdown"
                disabled={false}
                divider={false}
                header={false}
                onClick={[Function]}>
                12
                 Rounds
              </MenuItem>
            </DropdownButton>
            <InputGroupButton
              bsClass="input-group-btn">
              <Button
                active={false}
                block={false}
                bsClass="btn"
                bsStyle="default"
                disabled={false}
                type="submit">
                Create
              </Button>
            </InputGroupButton>
          </InputGroup>
        </FormGroup>
      </form>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={1} />
  </Row>
  <Row
    bsClass="row"
    componentClass="div">
    <Col
      bsClass="col"
      componentClass="div"
      xs={12} />
  </Row>
  <Row
    bsClass="row"
    componentClass="div">
    <Col
      bsClass="col"
      componentClass="div"
      xs={1} />
    <Col
      bsClass="col"
      componentClass="div"
      xs={5}>
      <ControlLabel
        bsClass="control-label"
        srOnly={false}>
        <h4>
          Add Players!
        </h4>
      </ControlLabel>
      <FormControl
        bsClass="form-control"
        componentClass="input"
        name="playerSearch"
        onChange={[Function]}
        placeholder="Search here for existing players to play with."
        type="text"
        value="" />
      <PlayerList
        all={true}
        move={[Function]}
        players={
          Array [
            Object {
              "createdAt": "2016-12-25T19:31:48",
              "id": 1,
              "isTeam": 0,
              "updatedAt": null,
              "username": "Alice",
            },
            Object {
              "createdAt": "2016-12-25T19:31:48",
              "id": 2,
              "isTeam": 0,
              "updatedAt": null,
              "username": "Gilbert",
            },
            Object {
              "createdAt": "2016-12-25T19:31:48",
              "id": 3,
              "isTeam": 0,
              "updatedAt": null,
              "username": "Bob",
            },
          ]
        }
        searchValue="" />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={5}>
      <ControlLabel
        bsClass="control-label"
        srOnly={false}>
        <h4>
          Added Players
        </h4>
      </ControlLabel>
      <PlayerList
        all={false}
        move={[Function]}
        players={Array []}
        searchValue="" />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={1} />
  </Row>
</Panel>
`;
